src/test/deca/context/invalid/class/instance/string.deca
// Description:
//    Utilisation de instanceof sur un String
//
// Resultats:
//    cannot cast String to String

{
	int a;
	if(a instanceof String) {}
}

